Try to stop mobile safari from crashing by using 2d transforms where possible. No other browser needs fixed media to have a 3d transform, so use the -webkit- prefix only. Get rid of backfac-visibility.

--- a/src/app/components/Cover/_index.scss
+++ b/src/app/components/Cover/_index.scss
@@ -37,13 +37,10 @@
   &.is-fixed {
     clip: rect(0, auto, auto, 0);
     -webkit-clip-path: inset(0 0 0 0);
-    clip-path: inset(0 0 0 0);
 
     & > * {
       position: fixed;
-      transform: translate3d(0, 0, 0);
-      -webkit-backface-visibility: hidden;
-      backface-visibility: hidden;
+      -webkit-transform: translateZ(0); // Mobile Safari needs this
       top: 0;
       left: 0;
       width: 100%;
@@ -140,7 +137,7 @@
       top: 0;
       left: 50%;
       z-index: -1;
-      transform: translate3d(-50%, 0, 0);
+      transform: translateX(-50%);
       width: calc(#{cells(10)} + .75rem);
       height: 100%;
       background-color: $color-black-transparent-30;
